tests/errors/macro/parser_define_exist_ident.c
#define A
#define A

int main()
{
	return 0;
}
